--- a/html/06heading.html
+++ b/html/06heading.html
@@ -19,8 +19,9 @@
 <h5>hello heading !@#$%^&</h5>
 <h6>hello heading !@#$%^&</h6>
 
-<hr>
 
+<hr>
+<!-- h$*6{Hello}-->
 <h1>Hello</h1>
 <h2>Hello</h2>
 <h3>Hello</h3>
