--- a/html/10html.html
+++ b/html/10html.html
@@ -1,15 +1,11 @@
-<!DOCTYPE html>
-<!-- html>head+body -->
-<html>
+<html lang="en">
 <head>
-    <meta charset="utf-8">
-    <!-- <meta charset="euc-kr"> -->
-    <title> 탭 제목</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
 </head>
 <body>
-    <p>
-        동해물과 백두산이
-    </p>
-
+    
 </body>
 </html>
