heading, comment, paragraph, html

--- a/html/06heading.html
+++ b/html/06heading.html
@@ -29,3 +29,36 @@
 <h5>Hello</h5>
 <h6>Hello</h6>
 
+<!-- retry -->
+<h1>Lorem, ipsum dolor.</h1>
+<h2>Lorem, ipsum dolor.</h2>
+<h3>Lorem, ipsum dolor.</h3>
+<h4>Lorem, ipsum dolor.</h4>
+<h5>Lorem, ipsum dolor.</h5>
+<h6>Lorem, ipsum dolor.</h6>
+
+<hr>
+
+<!-- p*4 -->
+<p></p>
+<p></p>
+<p></p>
+<p></p>
+
+<!-- h$*6 -->
+<h1>hello 마우스 커서 동시에 alt + 좌클릭</h1>
+<h2>hello 마우스 커서 동시에 alt + 좌클릭</h2>
+<h3>hello 마우스 커서 동시에 alt + 좌클릭</h3>
+<h4>hello 마우스 커서 동시에 alt + 좌클릭</h4>
+<h5>hello 마우스 커서 동시에 alt + 좌클릭</h5>
+<h6>hello 마우스 커서 동시에 alt + 좌클릭</h6>
+
+<hr>
+
+<!-- h$*6{Hello} -->
+<h1>Hello</h1>
+<h2>Hello</h2>
+<h3>Hello</h3>
+<h4>Hello</h4>
+<h5>Hello</h5>
+<h6>Hello</h6>
