--- a/html/08paragraph.html
+++ b/html/08paragraph.html
@@ -11,7 +11,8 @@
 <p>Libero vel magnam voluptatem repellat molestiae quo. Ex necessitatibus obcaecati unde, neque iusto dolor cupiditate iste recusandae quidem eveniet facere ullam impedit odio doloremque reiciendis quisquam sunt culpa exercitationem quasi?</p>
 
 <hr>
-
+<!-- <pre> 요소의 텍스트는 고정 너비 글꼴로 표시되며, 
+    텍스트는 공백과 줄 바꿈을 모두 유지합니다 -->
 <pre>
          첫번째 행
 두번째 행
