--- a/html/10html.html
+++ b/html/10html.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -6,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <p>일단 html:5 로 하고 나중에 스니펫 설정</p>
 </body>
 </html>
