--- a/html/11attribute.html
+++ b/html/11attribute.html
@@ -7,11 +7,14 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>김아랑1</h1>
-    <img src="김아랑.jpeg" alt="">
+    <h1>베이징</h1>
+    <img src="베이징.jpeg" alt="">
+    
+    <h1>평창</h1>
+    <img src="평창.png" alt="">
 
-    <h1>김아랑2</h1>
-    <img src="김아랑2.jpg" alt="">
+    <h1>도쿄</h1>
+    <img src="도쿄.png" alt="">
 
 </body>
 </html>
